@startuml MR

hide circle
skinparam linetype ortho

entity holiday {
    * holidayDate : TINYINT [PK]
    --
    title : VARCHAR(100)
}

entity privilege {
    * privilegeID : TINYINT [PK]
    --
    title : VARCHAR(60)
    summary : VARCHAR(300)
}

entity role {
    * roleID : TINYINT [PK]
    --
    title : VARCHAR(60)
}

entity rolePrivilege {
    * roleIDFK : TINYINT [FK]
    * privilegeIDFK : TINYINT [FK]
}

entity user {
    * userID : MEDIUMINT [PK]
    --
    birthName : VARCHAR(50)
    fSurname : VARCHAR(50)
    mSurname : VARCHAR(50)
    mail : VARCHAR(70)
    passwd : VARCHAR(70)
    passwdFlag : BOOLEAN
    zipCode : TINYINT
    houseNumber : TINYINT
    streetName : VARCHAR(100)
    workModality : TINYINT
    workStatus : BOOLEAN
    userRoleIDFK : TINYINT [FK]
}

entity workStatus {
    * workStatusID : MEDIUMINT [PK]
    --
    startDate : DATE
    endDate : DATE
    userStatusIDFK : MEDIUMINT [FK]
}

entity enterprise {
    * enterpriseID : TINYINT [PK]
    --
    title : VARCHAR(60)
}

entity department {
    * departmentID : TINYINT [PK]
    --
    title : VARCHAR(60)
    enterpriseIDFK : TINYINT [FK]
}

entity userDepartment {
    * departmentIDFK : TINYINT [FK]
    * userIDFK : MEDIUMINT [FK]
}

entity kpi {
    * kpiID : INT [PK]
    --
    title : VARCHAR(100)
    creationDate : DATE
    progress : TINYINT
    goal : VARCHAR(300)
    monthDuration : TINYINT
    kpiDepartmentIDFK : TINYINT [FK]
    kpiUserIDFK : MEDIUMINT [FK]
}

entity evidence {
    * evidenceID : INT [PK]
    --
    summary : VARCHAR(300)
    uploadDate : TIMESTAMP
    evidenceKpiIDFK : INT [FK]
}

entity evidenceMedia {
    * evidenceMediaID : INT [PK]
    --
    mediaLink : VARCHAR(255)
    evidenceIDFK : INT [FK]
}

entity vacation {
    * vacationID : INT [PK]
    --
    startDate : DATE
    endDate : DATE
    reason : VARCHAR(300)
    leaderStatus : BOOLEAN
    hrStatus : BOOLEAN
    vacationUserIDFK : MEDIUMINT [FK]
}

entity absence {
    * absenceID : INT [PK]
    --
    startDate : DATE
    endDate : DATE
    reason : VARCHAR(300)
    justified : BOOLEAN
    absenceUserIDFK : MEDIUMINT [FK]
}

entity absenceMedia {
    * absenceMediaID : INT [PK]
    --
    mediaLink : VARCHAR(300)
    absenceIDFK : INT [FK]
}

entity oneOnOne {
    * oneOnOneID : INT [PK]
    --
    expectedTime : TINYINT
    meetingDate : TIMESTAMP
    oneOnOneUserIDFK : MEDIUMINT [FK]
}

entity oneOnOneQuestion {
    * questionID : TINYINT [PK]
    --
    question : VARCHAR(300)
}

entity oneOnOneAnswer {
    * oneOnOneIDFK : INT [FK]
    * questionIDFK : TINYINT [FK]
    --
    answer : VARCHAR(400)
}

role ||--|{ rolePrivilege
privilege ||--|{ rolePrivilege
user }|--|| role
workStatus }|--|| user 
department }|--|| enterprise
user ||--|{ userDepartment
department ||--|{ userDepartment
kpi }|--|| department
kpi }o--|| user
evidence }o--|| kpi
evidenceMedia }o--|| evidence
vacation }o--|| user
absence }o--|| user
absenceMedia }o--|| absence
oneOnOne }o--|| user
oneOnOne ||--o{ oneOnOneAnswer
oneOnOneQuestion ||--o{ oneOnOneAnswer

@enduml